--- a/index.html
+++ b/index.html
@@ -106,19 +106,19 @@ body {font-family: Verdana,sans-serif;margin:0}
  
 <div class="slidephoto fade">
   <div class="numbertext">1 / 3</div>
-  <img src="photo1.jpg" style="width:100%">
+  <img src="photo1.jpeg" style="width:100%">
   <div class="text">Happy Birthday, Darling</div>
 </div>
  
 <div class="slidephoto fade">
   <div class="numbertext">2 / 3</div>
-  <img src="photo2.jpg" style="width:100%">
+  <img src="photo2.jpeg" style="width:100%">
   <div class="text">Have a Beautiful Life Ahead</div>
 </div>
  
 <div class="slidephoto fade">
   <div class="numbertext">3 / 3</div>
-  <img src="photo2.jpg" style="width:100%">
+  <img src="photo2.jpeg" style="width:100%">
   <div class="text">Live Long, Love you</div>
 </div>
  
